--- a/Crooz/Properties/AndroidManifest.xml
+++ b/Crooz/Properties/AndroidManifest.xml
@@ -4,6 +4,8 @@
 	<uses-permission android:name="android.permission.CAMERA" />
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 	<uses-permission android:name="android.permission.INTERNET" />
+  <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+  <uses-permission android:name="android.permission.ACCESS_COURSE_LOCATION" />
   <uses-feature android:name="android.hardware.camera" />
   <uses-feature android:name="android.hardware.camera.autofocus" />
 	<application android:label="Crooz" android:hardwareAccelerated="true"></application>
