--- a/Crooz/packages.config
+++ b/Crooz/packages.config
@@ -6,4 +6,5 @@
   <package id="Microsoft.ProjectOxford.Common" version="1.0.308" targetFramework="monoandroid60" />
   <package id="Microsoft.ProjectOxford.Emotion" version="1.0.331.1" targetFramework="monoandroid60" />
   <package id="Newtonsoft.Json" version="8.0.2" targetFramework="monoandroid60" />
+  <package id="RestSharp" version="105.2.3" targetFramework="monoandroid60" />
 </packages>
