--- a/Crooz/Properties/AndroidManifest.xml
+++ b/Crooz/Properties/AndroidManifest.xml
@@ -9,5 +9,5 @@
   <uses-permission android:name="android.permission.READ_PHONE_STATE" />
   <uses-feature android:name="android.hardware.camera" />
   <uses-feature android:name="android.hardware.camera.autofocus" />
-	<application android:label="Crooz" android:hardwareAccelerated="true"></application>
+	<application android:label="Crooz" android:hardwareAccelerated="true" android:largeHeap="true"></application>
 </manifest>
